# project_practice

./: .gitignore  pyproject.toml
config/: urls.py
config/settings/: base.py  local.py  prod.py
